Problem: header files not included in VS project files
Solution: add to list of sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -580,7 +580,136 @@ set (cxx-sources
         udp_address.cpp
         scatter.cpp
         gather.cpp
-		zap_client.cpp)
+		zap_client.cpp
+		# at least for VS, the header files must also be listed
+		address.hpp
+		array.hpp
+		atomic_counter.hpp
+		atomic_ptr.hpp
+		blob.hpp
+		client.hpp
+		clock.hpp
+		command.hpp
+		condition_variable.hpp
+		config.hpp
+		ctx.hpp
+		curve_client.hpp
+		curve_client_tools.hpp
+		curve_mechanism_base.hpp
+		curve_server.hpp
+		dbuffer.hpp
+		dealer.hpp
+		decoder.hpp
+		decoder_allocators.hpp
+		devpoll.hpp
+		dgram.hpp
+		dish.hpp
+		dist.hpp
+		encoder.hpp
+		epoll.hpp
+		err.hpp
+		fd.hpp
+		fq.hpp
+		gather.hpp
+		gssapi_client.hpp
+		gssapi_mechanism_base.hpp
+		gssapi_server.hpp
+		i_decoder.hpp
+		i_encoder.hpp
+		i_engine.hpp
+		i_mailbox.hpp
+		i_poll_events.hpp
+		io_object.hpp
+		io_thread.hpp
+		ip.hpp
+		ipc_address.hpp
+		ipc_connecter.hpp
+		ipc_listener.hpp
+		kqueue.hpp
+		lb.hpp
+		likely.hpp
+		macros.hpp
+		mailbox.hpp
+		mailbox_safe.hpp
+		mechanism.hpp
+		mechanism_base.hpp
+		metadata.hpp
+		msg.hpp
+		mtrie.hpp
+		mutex.hpp
+		norm_engine.hpp
+		null_mechanism.hpp
+		object.hpp
+		options.hpp
+		own.hpp
+		pair.hpp
+		pgm_receiver.hpp
+		pgm_sender.hpp
+		pgm_socket.hpp
+		pipe.hpp
+		plain_client.hpp
+		plain_server.hpp
+		poll.hpp
+		poller.hpp
+		poller_base.hpp
+		pollset.hpp
+		precompiled.hpp
+		proxy.hpp
+		pub.hpp
+		pull.hpp
+		push.hpp
+		radio.hpp
+		random.hpp
+		raw_decoder.hpp
+		raw_encoder.hpp
+		reaper.hpp
+		rep.hpp
+		req.hpp
+		router.hpp
+		scatter.hpp
+		select.hpp
+		server.hpp
+		session_base.hpp
+		signaler.hpp
+		socket_base.hpp
+		socket_poller.hpp
+		socks.hpp
+		socks_connecter.hpp
+		stdint.hpp
+		stream.hpp
+		stream_engine.hpp
+		sub.hpp
+		tcp.hpp
+		tcp_address.hpp
+		tcp_connecter.hpp
+		tcp_listener.hpp
+		thread.hpp
+		timers.hpp
+		tipc_address.hpp
+		tipc_connecter.hpp
+		tipc_listener.hpp
+		trie.hpp
+		udp_address.hpp
+		udp_engine.hpp
+		v1_decoder.hpp
+		v1_encoder.hpp
+		v2_decoder.hpp
+		v2_encoder.hpp
+		v2_protocol.hpp
+		vmci.hpp
+		vmci_address.hpp
+		vmci_connecter.hpp
+		vmci_listener.hpp
+		windows.hpp
+		wire.hpp
+		xpub.hpp
+		xsub.hpp
+		ypipe.hpp
+		ypipe_base.hpp
+		ypipe_conflate.hpp
+		yqueue.hpp
+		zap_client.hpp
+		)
 
 if (MINGW)
   # Generate the right type when using -m32 or -m64
