Fix cmake install error when BUILD_SHARED is off
This fixes an error with the cmake install configuration, which
attempted an invalid copy of a .pdb file on windows, when the
BUILD_SHARED option is disabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1106,7 +1106,7 @@ if (MSVC)
             ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
             PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
             COMPONENT SDK)
-    if (NOT CMAKE_PDB_OUTPUT_DIRECTORY)
+    if (NOT CMAKE_PDB_OUTPUT_DIRECTORY AND BUILD_SHARED)
       install (FILES ${CMAKE_CURRENT_BINARY_DIR}/bin/libzmq${MSVC_TOOLSET}-mt-gd-${ZMQ_VERSION_MAJOR}_${ZMQ_VERSION_MINOR}_${ZMQ_VERSION_PATCH}.pdb DESTINATION lib
             COMPONENT SDK)
     endif ()
