--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION "2.8.1")
 set(unittests
   unittest_ypipe
   unittest_poller
+  unittest_mtrie
 )
 
 #IF (ENABLE_DRAFTS)
