Tests for different TIPC address types and code cleanup
* Adds tests for binding/connecting with different TIPC address types
  using Unity
* Adds error checking for address type misuse

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -103,6 +103,7 @@ if(NOT WIN32)
     )
     if(ZMQ_HAVE_TIPC)
       list(APPEND tests
+            test_address_tipc
             test_pair_tipc
             test_reqrep_device_tipc
             test_reqrep_tipc
