Problem: no Travis tests for TIPC
Solution: mark one job with sudo: required and load the kernel module

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,8 +57,9 @@ matrix:
         - libsodium-dev
         - asciidoc
         - xmlto
-  - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled GSSAPI=enabled PGM=enabled NORM=enabled
+  - env: BUILD_TYPE=default CURVE=libsodium DRAFT=enabled GSSAPI=enabled PGM=enabled NORM=enabled TIPC=enabled
     os: linux
+    sudo: required
     addons:
       apt:
         sources:
