Problem: test_radio_dish not using unity
Solution: migrate to unity, and split test cases

--- a/Makefile.am
+++ b/Makefile.am
@@ -874,7 +874,8 @@ tests_test_timers_SOURCES = tests/test_timers.cpp
 tests_test_timers_LDADD = src/libzmq.la
 
 tests_test_radio_dish_SOURCES = tests/test_radio_dish.cpp
-tests_test_radio_dish_LDADD = src/libzmq.la
+tests_test_radio_dish_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_radio_dish_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_udp_SOURCES = tests/test_udp.cpp
 tests_test_udp_LDADD = src/libzmq.la
