Problem: test_immediate not using unity
Solution: migrate to unity, and split test cases

--- a/Makefile.am
+++ b/Makefile.am
@@ -489,7 +489,8 @@ tests_test_connect_resolve_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_connect_resolve_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_immediate_SOURCES = tests/test_immediate.cpp
-tests_test_immediate_LDADD = src/libzmq.la
+tests_test_immediate_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_immediate_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_last_endpoint_SOURCES = tests/test_last_endpoint.cpp
 tests_test_last_endpoint_LDADD = src/libzmq.la
