add various files missing from dists
- missing template from cmake
- add missing android build files
- add some missing ci_build.sh scripts

--- a/Makefile.am
+++ b/Makefile.am
@@ -944,6 +944,7 @@ EXTRA_DIST = \
 	autogen.sh	\
 	version.sh	\
 	src/libzmq.pc.cmake.in \
+	ci_build.sh \
 	src/libzmq.vers \
 	src/version.rc.in \
 	tests/CMakeLists.txt \
