Problem: Appveyor runs test sequentially
Solution: add -j flag to run them in paralle, cuts test runtime
from ~80 to ~20 seconds

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -102,5 +102,5 @@ after_build:
 
 test_script:
   - cmd: cd "%LIBZMQ_BUILDDIR%"
-  - cmd: ctest -C "%Configuration%" -V
+  - cmd: ctest -C "%Configuration%" -V -j5
 
