--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -71,6 +71,7 @@ set(tests
         test_monitor
 		test_socket_null
 	test_reconnect_ivl
+        test_mult_connect
 )
 if(ZMQ_HAVE_CURVE)
   list(APPEND tests 
