--- a/Makefile.am
+++ b/Makefile.am
@@ -424,7 +424,8 @@ test_apps = \
 	tests/test_bind_after_connect_tcp \
 	tests/test_sodium \
 	tests/test_reconnect_ivl \
-	tests/test_socket_null
+	tests/test_socket_null \
+	tests/test_mult_connect
 
 tests_test_ancillaries_SOURCES = tests/test_ancillaries.cpp
 tests_test_ancillaries_LDADD = src/libzmq.la
