--- a/Makefile.am
+++ b/Makefile.am
@@ -660,7 +660,8 @@ tests_test_stream_exceeds_buffer_SOURCES = tests/test_stream_exceeds_buffer.cpp
 tests_test_stream_exceeds_buffer_LDADD = src/libzmq.la
 
 tests_test_pub_invert_matching_SOURCES = tests/test_pub_invert_matching.cpp
-tests_test_pub_invert_matching_LDADD = src/libzmq.la
+tests_test_pub_invert_matching_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_pub_invert_matching_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_bind_after_connect_tcp_SOURCES = tests/test_bind_after_connect_tcp.cpp
 tests_test_bind_after_connect_tcp_LDADD = src/libzmq.la ${UNITY_LIBS}
