Problem: test_xpub_nodrop not using test framework
Solution: migrate to unity

--- a/Makefile.am
+++ b/Makefile.am
@@ -630,7 +630,8 @@ tests_test_capabilities_SOURCES = tests/test_capabilities.cpp
 tests_test_capabilities_LDADD = src/libzmq.la
 
 tests_test_xpub_nodrop_SOURCES = tests/test_xpub_nodrop.cpp
-tests_test_xpub_nodrop_LDADD = src/libzmq.la
+tests_test_xpub_nodrop_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_xpub_nodrop_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_xpub_manual_SOURCES = tests/test_xpub_manual.cpp
 tests_test_xpub_manual_LDADD = src/libzmq.la
