revert test progam until connect issue resolved

--- a/Makefile.am
+++ b/Makefile.am
@@ -424,8 +424,7 @@ test_apps = \
 	tests/test_bind_after_connect_tcp \
 	tests/test_sodium \
 	tests/test_reconnect_ivl \
-	tests/test_socket_null \
-	tests/test_mult_connect
+	tests/test_socket_null
 
 tests_test_ancillaries_SOURCES = tests/test_ancillaries.cpp
 tests_test_ancillaries_LDADD = src/libzmq.la
