Problem: test_radio_dish takes time near timeout
Solution: increase timeout

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -221,6 +221,10 @@ if(WIN32 AND ${POLLER} MATCHES "epoll")
   set_tests_properties(test_many_sockets PROPERTIES TIMEOUT 120)
 endif()
 
+if(WIN32)
+  set_tests_properties(test_radio_dish PROPERTIES TIMEOUT 30)
+endif()
+
 #add additional required flags
 #ZMQ_USE_TWEETNACL will already be defined when not using sodium
 if(ZMQ_HAVE_CURVE AND NOT ZMQ_USE_TWEETNACL)
