Problem: magic numbers and data duplication in plain_*.cpp
Solution: extract constants / move to plain_common.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -740,6 +740,7 @@ set (cxx-sources
 		pgm_socket.hpp
 		pipe.hpp
 		plain_client.hpp
+		plain_common.hpp
 		plain_server.hpp
 		poll.hpp
 		poller.hpp
