Problem: can't process ZMTP 3.1 cancel/subscribe commands
Solution: add some msg helpers to parse commands, and check for
subscribe or cancel commands and process them accordingly in the xpub
and xsub classes.

--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,7 @@ test_app_meta
 test_security_zap
 test_socket_null
 test_xpub_verbose
+test_mock_pub_sub
 unittest_ip_resolver
 unittest_mtrie
 unittest_poller
