--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -72,6 +72,7 @@ set(tests
         test_monitor
 		test_socket_null
 	test_reconnect_ivl
+        test_mock_pub_sub
 )
 if(ZMQ_HAVE_CURVE)
   list(APPEND tests 
